--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body{
     -webkit-backdrop-filter: blur(5.5px);
     background: rgba(255,255,255,0.75);
     border: 1px solid rgba(255,255,255,0.01);
-    border-radius: 16px;
-    box-shadow: 0px 10px 30px rgba(35, 35, 35, 0.75);
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px rgba(35, 35, 35, 0.75);
     color: #232323;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -42,7 +42,7 @@ body{
     -webkit-backdrop-filter: blur(5.5px);
     background: rgba(255,255,255,0.75);
     border: 1px solid rgba(255,255,255,0.01);
-    border-radius: 1px 1px 26px 26px;
+    border-radius: 0px 0px 20px 20px;
     box-shadow: 0 10px 30px rgba(35,35,35,0.1);
     color: #232323;
     font-size: 15px;
@@ -64,11 +64,11 @@ body{
     background: black;
     color: white;
     text-align: center;
-    border-radius: 10px 10px 1px 1px;
-    box-shadow: 0 5px 10px #232323;
-    font-size: 24px;
-    font-weight: 60;
-    height: 36px;
+    border-radius: 20px 20px 1px 1px;
+    font-size: 30px;
+    font-weight: 600;
+    height: 50px;
+    padding-top: 8px;
 }
 
 .timer{
